--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MkBlog</title>
+    <title>Blog</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+    <%= stylesheet_link_tag    'application', 'https://fonts.googleapis.com/css?family=Raleway:400,700' %>
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
   </head>
 
   <body>
+  <div id="sidebar">
+  		<div id="logo">
+  			<%= link_to root_path do %>
+  			<%= image_tag "logo.svg"%>
+  		
+  			<% end %>	
+		</div>
+		<ul>
+			<li class="category">Website</li>
+			<li><%= link_to "Blog", root_path %></li>
+			<li>About</li>
+		</ul>
+
+		<ul>
+			<li class="category">Social</li>
+			<li><a href="https://www.yandex.ru">Yandex</a></li>
+			<li><a href="https://www.rambler.ru">Rambler</a></li>
+			<li><a href="https://www.google.com">Google</a></li>
+			<li><a href="https://www.mail.ru">Mail</a></li>
+		</ul>
+		<p class="sign_in">Admin Login</p>
+  </div>
+
+  <div id="main_content">
+ 	<div id="header">
+ 	<p>All Posts</p>
+
+ 		<div class="buttons">
+ 		<button class="button"><%= link_to "New Posts", new_post_path %></button>
+ 		<button class="button">Log out</button>
+ 		</div>
+ 	</div>
+  </div>
     <%= yield %>
   </body>
 </html>
