--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,12 @@
  		<button class="button">Log out</button>
  		</div>
  	</div>
-  </div>
+
+ 	<% flash.each do |name, msg| %>
+
+ 		<%= content_tag(:div, msg, class: "alert") %>
+ 		<% end %>
     <%= yield %>
+    </div>
   </body>
 </html>
