--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,9 @@
 			<li><a href="https://www.google.com">Google</a></li>
 			<li><a href="https://www.mail.ru">Mail</a></li>
 		</ul>
+      <% if !user_signed_in? %>
 		<p class="sign_in">Admin Login</p>
+      <% end %>
   </div>
 
   <div id="main_content">
@@ -44,14 +46,16 @@
       <% else %>
         <%= link_to "Back to All Posts", root_path %>
       <% end %>
+      <% if user_signed_in? %>
 
  		<div class="buttons">
  		<button class="button"><%= link_to "New Posts", new_post_path %></button>
  		<button class="button">Log out</button>
  		</div>
+    <% end %>
  	</div>
 
- 	<% flash.each do |name, msg| %>
+ 	  <% flash.each do |name, msg| %>
 
  		<%= content_tag(:div, msg, class: "alert") %>
  		<% end %>
