--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,8 +5,7 @@
 
 		<div id="content">
 		<h1>Hello! My name is Vladimir</h1>
-		<p>Welcome to week 2 of my 12 Web Apps in 12 Weeks Challenge.</p>
-		<p>This week I built a blog in Rails 4. You're actually on the demo application right now. Cool stuff, right!.</p>
+		<p>Welcome to my Web App.</p>
 		<p>If you'd like to follow along as I learn more Ruby on Rails, find on the web at <a href="http://mackenziechild.me">mackenziechild.me</a></p>
 	</div>
 </div>
